feat: Funciones para guardado y lectura de seguimiento
